Production/Production/src/objects/LithiumSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Lithium Settings for Lithium-SFDC integration</description>
    <fields>
        <fullName>Base_URL__c</fullName>
        <description>The Lithium community&apos;s base URL</description>
        <inlineHelpText>Enter the Lithium base URL to be used in Lithium API callouts</inlineHelpText>
        <label>Base URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Create_New_Contact_record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If set, creates new Contact record during user sync if one is not found with same email address as the community user record being created/edited</description>
        <inlineHelpText>Check to create new Contact record if one is not found with the same email address as the community user record during user sync</inlineHelpText>
        <label>User Sync: Create New Contact record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>Lithium password to be used while making call outs to the REST API</description>
        <inlineHelpText>Enter a password for the Lithium username to be used in Lithium API callouts</inlineHelpText>
        <label>Lithium Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_With_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If set, then contacts who have the same email address as a community user will be linked</description>
        <inlineHelpText>Check to link contacts with community user based on email address</inlineHelpText>
        <label>User Sync: Link with Contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>Lithium username to be used while making call outs to the REST API</description>
        <inlineHelpText>Enter the Lithium username to be used in Lithium API callouts</inlineHelpText>
        <label>Lithium Login</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Lithium Settings</label>
</CustomObject>